Fixed layout issues on mobile devices

--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -318,7 +318,7 @@ $break-xsmall:576px;
     }
     @media screen and (max-width: 450px) {
       bottom: 0;
-      top: 0;
+      top: 100px;
     }
     img{
       width:100%;
@@ -669,6 +669,14 @@ $break-xsmall:576px;
     }
   }
   .footer{
+    position: relative;
+    
+    @media screen and (max-width: $breakpoint-tablet) {
+      margin-top: 130px;
+    }
+    @media screen and (max-width: 450px) {
+      margin-top: 100px;
+    }
     .footerlinks{
       display: flex;
       justify-content: space-between;
@@ -885,6 +893,13 @@ $break-xsmall:576px;
     }
   }
   #contact {
+    @media screen and (max-width: $breakpoint-tablet) {
+      top: 130px;
+    }
+    @media screen and (max-width: 450px) {
+      bottom: 0;
+      top: 100px;
+    }
     .contactHolder {
       pointer-events: none;
 
